<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <View
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_registration_ads_height" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/str_activity_registration"
                android:textColor="@color/registration_text"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />

            <EditText
                android:id="@+id/displayName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/transparent"
                android:gravity="left|center"
                android:hint="@string/str_activity_registration_displayname"
                android:textColor="@color/registration_text"
                android:textColorHint="@color/registration_text"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/edit_line" />

            <EditText
                android:id="@+id/emailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="25dp"
                android:background="@android:color/transparent"
                android:hint="@string/str_activity_registration_emailAddress"
                android:inputType="textEmailAddress"
                android:textColor="@color/registration_text"
                android:textColorHint="@color/registration_text"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/edit_line" />

            <EditText
                android:id="@+id/mobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="25dp"
                android:background="@android:color/transparent"
                android:hint="@string/str_activity_registration_mobilenumber"
                android:inputType="number"
                android:textColor="@color/registration_text"
                android:textColorHint="@color/registration_text"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/edit_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp" >

                <ImageView
                    android:id="@+id/citySpinnerIcon"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right|center"
                    android:scaleType="center"
                    android:src="@drawable/drop_down_arrow" />

                <TextView
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignRight="@id/citySpinnerIcon"
                    android:background="@android:color/transparent"
                    android:gravity="left|center"
                    android:text="Select City"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/registration_text"
                    android:textSize="16sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/edit_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp" >

                <ImageView
                    android:id="@+id/groupSpinnerIcon"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right|center"
                    android:scaleType="center"
                    android:src="@drawable/drop_down_arrow" />

                <TextView
                    android:id="@+id/group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignRight="@id/groupSpinnerIcon"
                    android:background="@android:color/transparent"
                    android:gravity="left|center"
                    android:text="Select Service"
                    android:textColor="@color/registration_text"
                    android:textColorHint="@color/registration_text"
                    android:textSize="16sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/edit_line" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="170dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/register"
                android:gravity="center"
                android:padding="7dp"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/skip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:text="@string/str_activity_registration_skip"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/str_activity_registration_call"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>